Started to add content to graces.html. Added more content to DOTSamurai_enemies.html.

--- a/nioh2/equipment/graces/graces.html
+++ b/nioh2/equipment/graces/graces.html
@@ -268,7 +268,7 @@
                 <span class="text-red-600 font-bold">+Value Sets</span> are an extra bonus on existing Graces or Sets. +Value sets
                 start to drop on Dream of the Nioh. In order to obtain the +Value extra bonus you must acquire a full +Value set.
                 You cannot mix and match a regular set with a +Value set. You can however soul match a regular set piece into a 
-                +Value set piece.
+                +Value set piece. Below the +Value extra bonus is in <span class="text-red-600 font-bold">red text</span>.
             </p>
         </div>
     </section>
@@ -283,6 +283,102 @@
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Base Game Light Armor Sets</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos"
+                id="light">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Set Name</th>
+                    <th>Description</th>
+                </tr>
+
+
+
+                <!-- 
+                    <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold"></span><br>
+                        <span class="italic"></span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        <br><br>
+
+                        3PC: <br>
+                        <br><br>
+
+                        4PC: <br>
+                        <br><br>
+
+                        5PC: <br>
+                        <br><br>
+
+                        6PC: <br>
+                        <br><br>
+
+                        7PC: <br>
+                        <br><br>
+                    </td>
+                </tr>
+                -->
+
+
+
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">A Multitude of Hopes</span><br>
+                        <span class="italic">Golden Gourd Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Auto-Life Recovery (Critical) <br><br>
+
+                        3PC: <br>
+                        Cherry Blossom Damage +10.0% <br><br>
+
+                        4PC: <br>
+                        Melee Damage +4.0% <br><br>
+
+                        5PC: <br>
+                        Amrita Earned +12.0% <br><br>
+
+                        6PC: <br>
+                        Increased Attack (Amrita Absorption) <br><br>
+
+                        7PC: <br>
+                        Attack Bonus (Amrita Gauge) AAA <br>
+                        <span class="text-red-600 font-bold">Faster Movement (Amrita Absorption)</span>
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Appetite for Ascension</span><br>
+                        <span class="italic">Merchant Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Gold Earned +5.0% <br><br>
+
+                        3PC: <br>
+                        Amrita Earned +10.0% <br><br>
+
+                        4PC: <br>
+                        Ki Recovery Speed +15.0% <br><br>
+
+                        5PC: <br>
+                        Auto-Life Recovery (Amrita Absorption) <br>
+                        <span class="bold-text red-text">Increased Attack (Amrita Absorption)</span><br><br>
+
+                        6PC: <br>
+                        - <br><br>
+
+                        7PC: <br>
+                        - <br><br>
+                    </td>
+                </tr>
+            </table>
         </div>
     </section>
 
