Added more content to graces.html.

--- a/nioh2/equipment/graces/graces.html
+++ b/nioh2/equipment/graces/graces.html
@@ -297,7 +297,7 @@
 
 
                 <!-- 
-                    <tr class="even:bg-dark-gray-2">
+                <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold"></span><br>
                         <span class="italic"></span>
@@ -319,7 +319,6 @@
                         <br><br>
 
                         7PC: <br>
-                        <br><br>
                     </td>
                 </tr>
                 -->
@@ -349,7 +348,7 @@
 
                         7PC: <br>
                         Attack Bonus (Amrita Gauge) AAA <br>
-                        <span class="text-red-600 font-bold">Faster Movement (Amrita Absorption)</span>
+                        <span class="font-bold text-red-600">Faster Movement (Amrita Absorption)</span>
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
@@ -369,15 +368,145 @@
 
                         5PC: <br>
                         Auto-Life Recovery (Amrita Absorption) <br>
-                        <span class="bold-text red-text">Increased Attack (Amrita Absorption)</span><br><br>
+                        <span class="font-bold text-red-600">Increased Attack (Amrita Absorption)</span><br><br>
 
                         6PC: <br>
                         - <br><br>
 
                         7PC: <br>
-                        - <br><br>
+                        -
                     </td>
                 </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Champion of Tosa</span><br>
+                        <span class="italic">Tosa Governor's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Life +100 <br><br>
+
+                        3PC: <br>
+                        Gold Earned +10.0% <br><br>
+
+                        4PC: <br>
+                        Melee Damage +4.0% <br><br>
+
+                        5PC: <br>
+                        Ki Recovery (Timely Guard) / Singular Mastery +15.0% <br>
+                        <span class="font-bold text-red-600">Active Skill Damage +10.0%</span><br><br>
+
+                        6PC: <br>
+                        -<br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Devout Practitioner (DLC 3)</span><br>
+                        <span class="italic">Kobo Daishi's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Increased Attack & Defense (Splitstaff) +15 <br><br>
+
+                        3PC: <br>
+                        Life +250 <br><br>
+
+                        4PC: <br>
+                        Melee Damage +5.0% <br><br>
+
+                        5PC: <br>
+                        Dodge Ki Consumption -15.0%<br><br>
+
+                        6PC: <br>
+                        Life Recovery (Purification) +1000 <br><br>
+
+                        7PC: <br>
+                        Attack Bonus (Magic) A<br>
+                        <span class="font-bold text-red-600">Mystic Dyad (Splitstaff)</span>
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Dragon Ninja (DLC 2)</span><br>
+                        <span class="italic">Hayabusa Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Life +150<br><br>
+
+                        3PC: <br>
+                        Increased Attack (Ninjutsu Hit)<br><br>
+
+                        4PC: <br>
+                        Melee Damage +8.0%<br><br>
+
+                        5PC: <br>
+                        Extend Dodge Invulnerability<br><br>
+
+                        6PC: <br>
+                        Unlimited Shuriken<br><br>
+
+                        7PC: <br>
+                        True Dragon Sword <br>
+                        <span class="font-bold text-red-600">Empowered Ninjutsu B+</span>
+                    </td>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Head of the Iga Ninja</span><br>
+                        <span class="italic">Iga Jonin Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Throwing Speed Up (Iga Enhanced Shrapnel Bomb)<br><br>
+
+                        3PC: <br>
+                        Ninjutsu Power +45<br><br>
+
+                        4PC: <br>
+                        Melee Damage +6.5%<br><br>
+
+                        5PC: <br>
+                        Increased Attack & Defense (Spear) +80<br><br>
+
+                        6PC: <br>
+                        Dash Ki Consumption -18.2% <br>
+                        <span class="font-bold text-red-600">Damage Bonus (Ninjutsu Power) AA</span><br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Kurama Swordmaster (DLC 1)</span><br>
+                        <span class="italic">Yoshitsune's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Increased Attack & Defense (Sword) +15 <br><br>
+
+                        3PC: <br>
+                        Kurama Sword Dance Damage +13.0% <br><br>
+
+                        4PC: <br>
+                        Melee Damage +6.0% <br><br>
+
+                        5PC: <br>
+                        Yokai Ability Damage (Feral) +15.0% <br><br>
+
+                        6PC: <br>
+                        Dodge Ki Consumption -20.0% <br><br>
+
+                        7PC: <br>
+                        Attack Bonus (Skill) A <br>
+                        <span class="font-bold text-red-600">Blood of the Yokai</span>
+                    </td>
+                </tr>
+                
             </table>
         </div>
     </section>
