Added more content to graces.html.

--- a/nioh2/equipment/graces/graces.html
+++ b/nioh2/equipment/graces/graces.html
@@ -327,7 +327,7 @@
 
                 <tr class="even:bg-dark-gray-2">
                     <td>
-                        <span class="font-bold">A Multitude of Hopes</span><br>
+                        <span class="font-bold">A Multitude of Hopes</span><br><br>
                         <span class="italic">Golden Gourd Armor</span>
                     </td>
                     <td>
@@ -353,7 +353,7 @@
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
-                        <span class="font-bold">Appetite for Ascension</span><br>
+                        <span class="font-bold">Appetite for Ascension</span><br><br>
                         <span class="italic">Merchant Armor</span>
                     </td>
                     <td>
@@ -379,7 +379,7 @@
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
-                        <span class="font-bold">Champion of Tosa</span><br>
+                        <span class="font-bold">Champion of Tosa</span><br><br>
                         <span class="italic">Tosa Governor's Armor</span>
                     </td>
                     <td>
@@ -405,7 +405,7 @@
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
-                        <span class="font-bold">Devout Practitioner (DLC 3)</span><br>
+                        <span class="font-bold">Devout Practitioner (DLC 3)</span><br><br>
                         <span class="italic">Kobo Daishi's Armor</span>
                     </td>
                     <td>
@@ -431,7 +431,7 @@
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
-                        <span class="font-bold">Dragon Ninja (DLC 2)</span><br>
+                        <span class="font-bold">Dragon Ninja (DLC 2)</span><br><br>
                         <span class="italic">Hayabusa Armor</span>
                     </td>
                     <td>
@@ -456,7 +456,7 @@
                     </td>
                 <tr class="even:bg-dark-gray-2">
                     <td>
-                        <span class="font-bold">Head of the Iga Ninja</span><br>
+                        <span class="font-bold">Head of the Iga Ninja</span><br><br>
                         <span class="italic">Iga Jonin Armor</span>
                     </td>
                     <td>
@@ -482,7 +482,7 @@
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
-                        <span class="font-bold">Kurama Swordmaster (DLC 1)</span><br>
+                        <span class="font-bold">Kurama Swordmaster (DLC 1)</span><br><br>
                         <span class="italic">Yoshitsune's Armor</span>
                     </td>
                     <td>
@@ -506,7 +506,318 @@
                         <span class="font-bold text-red-600">Blood of the Yokai</span>
                     </td>
                 </tr>
-                
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Li, the Red Demon</span><br><br>
+                        <span class="italic">Red Demon Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Spearfall Damage +10.0% <br><br>
+
+                        3PC: <br>
+                        Active Skill Ki Consumption -10.0% <br><br>
+
+                        4PC: <br>
+                        Melee Damage vs. Scorched Enemy +15.0% <br><br>
+
+                        5PC: <br>
+                        Melee Damage +7.0% <br><br>
+
+                        6PC: <br>
+                        Ki Recovery Speed +20.0% <br>
+                        <span class="font-bold text-red-600">Attack Bonus (Constitution) A</span><br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Master of Illusion</span><br><br>
+                        <span class="italic">Flying Kato's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Ninjutsu Damage (Unscathed) +10.0% <br><br>
+
+                        3PC: <br>
+                        Ninjutsu Power +48 <br><br>
+
+                        4PC: <br>
+                        Faster Ki Recovery (Ninjutsu Used) <br><br>
+
+                        5PC: <br>
+                        Untouched Ninjutsu +15.0% <br><br>
+
+                        6PC: <br>
+                        Damage Bonus (Ninjutsu Power) AAA- <br>
+                        <span class="font-bold text-red-600">Empowered Ninjutsu B+</span><br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Master of Spears</span><br><br>
+                        <span class="italic">Mataza's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Faster Movement (Enemy Killed) 90% <br><br>
+
+                        3PC: <br>
+                        Triple Threat Damage +15.0% <br><br>
+
+                        4PC: <br>
+                        Melee Damage +5.0% <br><br>
+
+                        5PC: <br>
+                        Increased Attack & Defense (Spear) +40 <br><br>
+
+                        6PC: <br>
+                        Active Skill Ki Consumption -10.0% <br><br>
+
+                        7PC: <br>
+                        Thrust Damage +10.7% <br>
+                        <span class="font-bold text-red-600">Thrust Damage +12.0%</span>
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Moonlight Flutist (DLC 2)</span><br><br>
+                        <span class="italic">Samurai Noble's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Life +150 <br><br>
+
+                        3PC: <br>
+                        Ki Recovery Speed +10.0% <br><br>
+
+                        4PC: <br>
+                        Tea Utensil Drop Rate +10.0% <br><br>
+
+                        5PC: <br>
+                        Melee Ki Damage +20.0% <br><br>
+
+                        6PC: <br>
+                        Finishing Flair A <br>
+                        <span class="font-bold text-red-600">Active Skill Ki Damage +15.0%</span><br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Purifying Presence</span><br><br>
+                        <span class="italic">High Priest Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Untouched Sacred Water 35.0% <br><br>
+
+                        3PC: <br>
+                        Melee Damage vs. Yokai +3.0% <br><br>
+
+                        4PC: <br>
+                        Life Recovery (Purification) 196 <br><br>
+
+                        5PC: <br>
+                        Melee Damage vs. Yokai +5.0%<br>
+                        <span class="font-bold text-red-600">Counter-Yokai Tactics B-</span><br><br>
+
+                        6PC: <br>
+                        - <br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Righteous Strategist</span><br><br>
+                        <span class="italic">Justice Ministry Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Amrita Gauge Charge +5.0% <br><br>
+
+                        3PC: <br>
+                        Moon Shadow Damage +20.0% <br><br>
+
+                        4PC: <br>
+                        Melee Damage +6.0% / Critical Yokai Shift (Dark Realm) +40.0% <br><br>
+
+                        5PC: <br>
+                        Amrita Gauge Charge +15.0% <br><br>
+
+                        6PC: <br>
+                        Melee Damage +9.0% <br>
+                        <span class="font-bold text-red-600">Melee Damage (Ailing Enemy) +15.0%</span><br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Ruler of the Riverside Yokai</span><br><br>
+                        <span class="italic">Kawanami Clan Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Efficient Yokai Abilities (All) +20.2% <br><br>
+
+                        3PC: <br>
+                        Whirlwind Damage +15.0% <br><br>
+
+                        4PC: <br>
+                        Water Damage +10.0% <br><br>
+
+                        5PC: <br>
+                        Melee Damage +7.0% <br><br>
+
+                        6PC: <br>
+                        Increased Attack & Defense (Kusarigama) +80 <br>
+                        <span class="font-bold text-red-600">Melee Damage vs. Saturated Enemy +20.0%</span><br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Saika's Yatagarasu</span><br><br>
+                        <span class="italic">Yatagarasu Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Life Drain (Bullseye) 210 <br><br>
+
+                        3PC: <br>
+                        Dodge Ki Consumption -10.0% <br><br>
+
+                        4PC: <br>
+                        Melee Damage +5.0% <br><br>
+
+                        5PC: <br>
+                        Auto-Target Weak Point <br><br>
+
+                        6PC: <br>
+                        Reduced Defense (Ranged Weapon Hit) 50% <br><br>
+
+                        7PC: <br>
+                        Untouched Ammo +20% <br>
+                        <span class="font-bold text-red-600">Bullseye Bonus +20.0%</span>
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Servant of the Gods</span><br><br>
+                        <span class="italic">Shinto Priest Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Untouched Sacred Water 35.0% <br><br>
+
+                        3PC: <br>
+                        Damage Taken vs. Yokai -3.0% <br><br>
+
+                        4PC: <br>
+                        Life Recovery (Purification) 196 <br><br>
+
+                        5PC: <br>
+                        Damage Taken vs. Yokai -5.0% <br>
+                        <span class="font-bold text-red-600">Counter-Yokai Tactics B-</span><br><br>
+
+                        6PC: <br>
+                        - <br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Straight and True (DLC 1)</span><br><br>
+                        <span class="italic">Blessed Sleeve Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Bullseye Bonus +25.0% <br><br>
+
+                        3PC: <br>
+                        Auto-Target Weak Point <br><br>
+
+                        4PC: <br>
+                        Melee Damage +5.0% <br><br>
+
+                        5PC: <br>
+                        Ki +60 <br><br>
+
+                        6PC: <br>
+                        Untouched Arrows 20.0% <br>
+                        <span class="font-bold text-red-600">Bow Damage +20.0%</span><br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Tactician's Ingenuity</span><br><br>
+                        <span class="italic">Legendary Strategist's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Enemy Sensor <br><br>
+
+                        3PC: <br>
+                        Amrita Earned +5.0% / Treasure Sensor<br><br>
+
+                        4PC: <br>
+                        Melee Damage +6.0% <br><br>
+
+                        5PC: <br>
+                        Melee Ki Damage 20.0% <br>
+                        <span class="font-bold text-red-600">Finishing Flair B+</span><br><br>
+
+                        6PC: <br>
+                        - <br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">The Spirit of Seimei</span><br><br>
+                        <span class="italic">Genmei Onmyo Mage Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Onmyo Magic Damage (Unscathed) +10.0% <br><br>
+
+                        3PC: <br>
+                        Onmyo Magic Power +48 <br><br>
+
+                        4PC: <br>
+                        Reduced Defense (Enemy) (Onmyo Magic) <br><br>
+
+                        5PC: <br>
+                        Untouched Onmyo Magic +15.0% <br>
+                        <span class="font-bold text-red-600">Ultimate Magic</span><br><br>
+
+                        6PC: <br>
+                        - <br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
             </table>
         </div>
     </section>
