Added more content to graces.html, finished the light armor tables.

--- a/nioh2/equipment/graces/graces.html
+++ b/nioh2/equipment/graces/graces.html
@@ -818,6 +818,125 @@
                         -
                     </td>
                 </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">The Triumph of Tranquility</span><br><br>
+                        <span class="italic">Master Swordsman Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Ki Recovery (Unscathed) +5.0% <br><br>
+
+                        3PC: <br>
+                        Melee Damage +3.0% <br><br>
+
+                        4PC: <br>
+                        Increased Attack & Defense (Sword) +50 / Ki Pulse Recovery +10.0%<br><br>
+
+                        5PC: <br>
+                        Active Skill Damage +10.0% <br>
+                        <span class="font-bold text-red-600">Melee Damage (Unscathed) +12.0%</span><br><br>
+
+                        6PC: <br>
+                        - <br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">The Vicissitudes of Life</span><br><br>
+                        <span class="italic">Pit Viper's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Active Skill Ki Consumption -5.0% <br><br>
+
+                        3PC: <br>
+                        Ki +50 <br><br>
+
+                        4PC: <br>
+                        Melee Damage vs. Yokai +6.0% <br><br>
+
+                        5PC: <br>
+                        Auto Life Recovery (Purification) <br>
+                        <span class="font-bold text-red-600">Melee Damage vs. Poisoned Enemy +20.0%</span><br><br>
+
+                        6PC: <br>
+                        - <br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Yokai Slayer</span><br><br>
+                        <span class="italic">Sohaya Garb Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Item Drop Rate vs. Yokai +5.0% <br><br>
+
+                        3PC: <br>
+                        Stealth (Yokai Enemies) A <br><br>
+
+                        4PC: <br>
+                        Melee Damage vs. Yokai +5.5% <br><br>
+
+                        5PC: <br>
+                        Life Drain (Melee Kill) 196 <br>
+                        <span class="font-bold text-red-600">Melee Damage vs. Yokai +12.0%</span><br><br>
+
+                        6PC: <br>
+                        - <br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+            </table>
+
+            <!-- ========== ========== ==========
+            Light Armor Special Boon Set
+            ========== ========== ========== -->
+            <h3 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Light Armor Special Boon Set</h3>
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Set Name</th>
+                    <th>Description</th>
+                </tr>
+
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Yokai Slayer</span><br><br>
+                        <span class="italic">Sohaya Deserter Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Item Drop rate vs. Yokai +5.0% <br><br>
+
+                        3PC: <br>
+                        Stealth (Yokai Enemies) A <br><br>
+
+                        4PC: <br>
+                        Melee Damage vs. Yokai +5.5% <br><br>
+
+                        5PC: <br>
+                        Life Drain (Melee Kill) 196 <br>
+                        <span class="font-bold text-red-600">Melee Damage vs. Yokai +12.0%</span><br><br>
+
+                        6PC: <br>
+                        - <br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
             </table>
         </div>
     </section>
